[gd_scene load_steps=8 format=3 uid="uid://ceq63xnq61set"]

[ext_resource type="Script" path="res://Player/Scripts/player.gd" id="1_fymjr"]
[ext_resource type="Resource" uid="uid://c5y57lgle2j8e" path="res://Player/Resources/player_inventory.tres" id="2_5v4jc"]
[ext_resource type="PackedScene" uid="uid://snjjhp8qrtyt" path="res://Player/Scenes/inventory_window.tscn" id="3_8ltmb"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uidkc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b26hn"]

[sub_resource type="SphereShape3D" id="SphereShape3D_e8178"]
radius = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_akj5h"]
radius = 0.2

[node name="player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_fymjr")
inventory_data = ExtResource("2_5v4jc")

[node name="mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_uidkc")

[node name="collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_b26hn")

[node name="navigation_agent" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.1

[node name="pickup_radius" type="Area3D" parent="."]
collision_mask = 8

[node name="pickup_collision" type="CollisionShape3D" parent="pickup_radius"]
shape = SubResource("SphereShape3D_e8178")

[node name="UI" type="Node" parent="."]

[node name="inventory_window" parent="UI" instance=ExtResource("3_8ltmb")]

[node name="mouse_detector" type="Area3D" parent="." groups=["detector"]]
collision_layer = 2
collision_mask = 8

[node name="mouse_detector_collision" type="CollisionShape3D" parent="mouse_detector"]
shape = SubResource("SphereShape3D_akj5h")
